update docker for maven and readme.